# react-fastapi-docker

./: .gitignore  README.md  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml
.github/workflows/: backend-ci.yml  deploy-all.yml  frontend-ci.yml  production-deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: database.py  main.py  models.py
backend/tests/: conftest.py  test_main.py
caddy/: Caddyfile  Caddyfile.production
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx
monitoring/grafana/provisioning/dashboards/: fastapi.json
monitoring/prometheus/: prometheus.yml
